feat: deliver versioned configuration to edge
